<resources>
<string-array name="decimal_numbers">
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
    <item>7</item>
    <item>8</item>
    <item>9</item>
    <item>10</item>
</string-array>
<string-array name="Category_selection">
    <item>Length/Distance</item>
    <item>Mass</item>
    <item>Volume</item>
    <item>Area</item>
    <item>Temperature</item>
    <item>Velocity</item>
    <item>Pressure</item>
    <item>Force</item>
    <item>Energy</item>
    <item>Power</item>
    <item>Time</item>
    <item>Frequency</item>
    <item>Angle</item>
    <item>BIN,OCT,DEC and HEX</item>
    <item>Data storage</item>
    <item>Oil</item>
    <item>Gas</item>
</string-array>
<string-array name="Category_Header">
    <item>Physical units</item>
    <item>Numeral systems</item>
    <item>Natural resources</item>
</string-array>
<string-array name="Category_Angle">
  	<item>radian</item>
  	<item>degree</item>
  	<item>minute</item>
  	<item>second</item>
  	<item>circle</item>
  	<item>grad</item>
  	<item>thousandth</item>    
</string-array>
<string-array name="Category_Data">
    <item>bit</item>
    <item>nibble</item>
    <item>byte</item>
    <item>word</item>
    <item>double word</item>
    <item>quad word</item>
    <item>kilobit</item>
    <item>megabit</item>
    <item>gigabit</item>
    <item>terabit</item>
    <item>Kilobyte (KB)</item>
    <item>Megabyte (MB)</item>
    <item>Gigabyte (GB)</item>
    <item>Terabyte (TB)</item>
    <item>Petabyte (PB)</item>
    <item>Exabyte (EB)</item>
</string-array>
<string-array name="Category_Energy">
    <item>joule</item>
    <item>ERG</item>
    <item>kilowatt/hour</item>
    <item>electron-volt</item>
    <item>calorie</item>
    <item>kilogram TNT</item>
    <item>BTU</item>
    <item>kilogram-force meter</item>
    <item>foot-pound force</item>
</string-array>
<string-array name="Category_Freq">
    <item>microhertz</item>
    <item>millihertz</item>
    <item>hertz</item>
    <item>kilohertz</item>
    <item>megahertz</item>
    <item>gigahertz</item>
    <item>terahertz</item>
</string-array>
<string-array name="Category_Gas">
    <item>cubic meter</item>
    <item>cubic foot</item>
    <item>tonne LNG</item>
    <item>liter</item>
    <item>U.S. gallon</item>
    <item>British gallon</item>
</string-array>
<string-array name="Category_Length">
    <item>millimeter</item>
    <item>centimeter</item>
    <item>decimeter</item>
    <item>meter</item>
    <item>kilometer</item>
    <item>foot (international)</item>
    <item>inch</item>
    <item>mile</item>
    <item>yard</item>
    <item>cable length</item>
</string-array>
<string-array name="Category_Mass">
    <item>milligram</item>
    <item>gram</item>
    <item>kilogram</item>
    <item>tonne</item>
    <item>grain</item>
    <item>ounce</item>
    <item>pound</item>
    <item>stone</item>
    <item>pood</item>
    <item>carat</item>
</string-array>
<string-array name="Category_Oil">
    <item>barrel</item>
    <item>tonne</item>
    <item>liter</item>
</string-array>
<string-array name="Category_Pwr">
    <item>watt</item>
    <item>kilowatt</item>
    <item>erg per second </item>
    <item>horsepower</item>
    <item>British horsepower </item>
    <item>calorie per second </item>
    <item>kilocalorie per hour </item>
    <item>BTU per second</item>
    <item>kilogram-force meter per second</item>
</string-array>
<string-array name="Category_Pressure">
    <item>bar</item>
    <item>pascal</item>
    <item>millimeter mercury </item>
    <item>physical atmosphere </item>
    <item>technical atmosphere </item>
    <item>psi</item>
    <item>inch mercury </item>
    <item>dyne per square centimeter</item>
</string-array>
<string-array name="Category_Power">
    <item>newton</item>
    <item>dyne</item>
    <item>kilogram-force</item>
    <item>pound-force</item>
    <item>kip</item>
</string-array>
<string-array name="Category_Speed">
    <item>kilometer per hour </item>
    <item>meter per second</item>
    <item>mile per hour</item>
    <item>knot</item>
    <item>foot per second</item>
</string-array>
<string-array name="Category_Square">
    <item>square centimeter</item>
    <item>square inch</item>
    <item>square foot</item>
    <item>square yard</item>
    <item>square meter</item>
    <item>acre</item>
    <item>Irish acre</item>
    <item>Scottish acre</item>
    <item>hectare</item>
    <item>dunam</item>
    <item>square mile</item>
    <item>one hundred of square metres</item>
    <item>are</item>
</string-array>
<string-array name="Category_Temp">
    <item>°C (degree Celsius)</item>
    <item>°F (degrees Fahrenheit)</item>
    <item>°K (degree Kelvin)</item>
    <item>°R (degree Rankine)</item>
    <item>°De (degree Delisle)</item>
    <item>°N (degree Newton)</item>
    <item>°Re (degree Réaumur)</item>
    <item>°Ro (degree Rømer)</item>
</string-array>
<string-array name="Category_Time">
    <item>second</item>
    <item>nanosecond</item>
    <item>microsecond</item>
    <item>millisecond</item>
    <item>minute</item>
    <item>hour</item>
    <item>day</item>
    <item>week</item>
    <item>month (approximate value)</item>
    <item>year</item>
    <item>century</item>
    <item>millenium</item>
</string-array>
<string-array name="Category_Volume">
    <item>cubic meter</item>
    <item>cubic centimeter</item>
    <item>cubic millimeter</item>
    <item>liter</item>
    <item>decalitre (dal)</item>
    <item>milliliter</item>
    <item>U.S. liquid gallon</item>
    <item>teaspoon</item>
    <item>tablespoon</item>
</string-array>
    <string name="app_name">Easy Converter</string>
    <string name="LANG_DEF">ENG</string>
    <string name="MenuSettingsStr">Settings</string>
    <string name="MenuInfoStr">About</string>
    <string name="MenuExitStr">Exit</string>
    <string name="MenuDecimal">Decimal places</string>
    <string name="MenuDecimalSum">Count of places in decimal fraction</string>
    <string name="MenuCutZero">Trim trailing zeros</string>
    <string name="MenuCutZeroSum">Trim trailing zeros in result field</string>
    <string name="MenuVibroOn">Vibrate on Reverse</string>
    <string name="MenuVibroOnSum">Vibrate when reverse button is clicked</string>
    <string name="CalcScreenFrom">From</string>
    <string name="CalcScreenTo">To</string>
    <string name="CalcScreenValue">Value</string>
    <string name="CalcScreenResult">Result</string>
    <string name="CalcScreenDescHeader">Description</string>
    <string name="CalcScreenDEC">Decimal</string>
    <string name="CalcScreenOCT">Octal</string>
    <string name="CalcScreenBIN">Binary</string>
    <string name="CalcScreenHEX">Hexadecimal</string>
    <string name="PopupEmptyField">Empty field</string>
    <string name="PopupSelect">Selected</string>
    <string name="PopupMenuHeader">Menu</string>
    <string name="PopupMenuText1">Copy result to buffer</string>
    <string name="PopupMenuResultCopied">The result has been successfully copied to clipboard</string>
    <string name="PopupMenuHeader2">Unit selection</string>
    <string name="PopupMenuOKbutton">OK</string>
    <string name="Description">Description!</string>
    <string name="AboutTitleStr">About</string>
    <string name="AboutProdNameStr">Easy Converter</string>
    <string name="AboutProdVerStr">Version: </string>
    <string name="AboutTextStr">Easy unit converter for various unit conversions.</string>
    <string name="AboutDeveloperStr">This software is developed by TECHNOLOGIES company. dProgs software department</string>
    <string name="AboutDevNameStr">Author: Levin Dmitriy</string>
    <string name="AboutDesignNameStr">Icon\s design: Shevchenko Sergey</string>
    <string name="AboutEMAILStr"> info@technologies.org.ua</string>
    <string name="AboutURLStr"> www.technologies.org.ua</string>
    <string name="AboutPhoneNumber"> +38-048-704-8350</string>
    <string name="AboutButtonStr">OK</string>
<string-array name="Description_Category_Angle">
  	<item>The basic unit of measure of flat corners in the modern mathematics</item>
  	<item>The unit of measure of a flat corner equal of 1/90 parts of a right angle</item>
  	<item>The unit of measure of flat corners equal of 1/60 degrees</item>
  	<item>The unit of measure of a corner equal of 1/3600 parts of degree or 1/60 minutes</item>
  	<item>Unit of measure of corners. One turn is equal to the minimum angle of rotation 
  	      at which position (asymmetrical) system coincides with the initial</item>
  	<item>The unit of measure of flat corners equal to a hundredth part of a right angle</item>
  	<item>The unit of measure of corners accepted in artillery and equaling one six-thousandth part of a turn</item>    
</string-array>
<string-array name="Description_Category_Data">
    <item>Bit — a base unit of measure of quantity of the information 
          (one bit in binary notation) accepting values 0 or 1</item>
    <item>Nibble — is a four-bit aggregation or half an octet or corresponds to a single hexadecimal digit</item>
    <item>Byte — unit of storage and processing of the digital information. 
          In modern computing systems the byte is considered equal to eight bits</item>
    <item>Word - unit of storage of the information to equal 2 bytes</item>
    <item>Double word - unit of storage of the information to equal 4 bytes</item>
    <item>Quadruple word - unit of storage of the information to equal 8 bytes</item>
    <item>Kilobit — a unit of measure of quantity of the binary information</item>
    <item>Megabit — quantity of the information, equal 1000000 (million) bits</item>
    <item>Gigabit — quantity of the information, equal 100000000 (billion) bits (1000 MB)</item>
    <item>Terabit — the quantity of the information equal of 1000 GBs</item>
    <item>Kilobyte — a unit of measure of quantity of the information, to equal 1024 bytes</item>
    <item>Megabyte — a unit of measure of quantity of the information, to equal 1 048 576 bytes (1024 KB)</item>
    <item>Gigabyte — a multiple unit of measure of quantity of the information, equal 1 073 741 824 byte (1024 MB)</item>
    <item>Terabyte — a unit of measure of quantity of the information, to equal 1 099 511 627 776 standard (8-bit) bytes (1024 GB)</item>
    <item>Petabyte — a unit of measure of quantity of the information, to equal 1024 TB</item>
    <item>Exabyte — a unit of measure of quantity of the information, to equal 1024 PT</item>
</string-array>
<string-array name="Description_Category_Energy">
    <item>Derived unit of energy or work or heat in the International System of Units</item>
    <item>The energy and work unit of measure equal of 10 ^-7 J</item>
    <item>Stand-alone unit of measure of energy and the work, equal 3 600 000 J</item>
    <item>Stand-alone unit of measure of energy and the work, equal 1,60217653 (14) ×10 ^ − 19 J</item>
    <item>Stand-alone unit of measure of energy and the work, equal 4,19 J</item>
    <item>Stand-alone unit of measure of energy and the work, equal 4 612 000 J</item>
    <item>The energy and work unit of measure equal of 1055,06 J</item>
    <item>Stand-alone unit of measure of energy and the work, equal 9,81 J</item>
    <item>The energy and work unit of measure equal of 1,36 J</item>
</string-array>
</resources>