<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_button" 
    android:layout_alignParentLeft="true"
    >
<LinearLayout
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  <TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="14dp"
	android:text="@string/CalcScreenDEC" 
  />
  <EditText
	android:id="@+id/CountSystemDEC"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    android:phoneNumber="true"
  	android:text="0"
  />
  <TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="14dp"
	android:text="@string/CalcScreenHEX" 
  />
  <EditText
	android:id="@+id/CountSystemHEX"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
  	android:text="0"
  />
  <TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="14dp"
	android:text="@string/CalcScreenOCT" 
  />
  <EditText
	android:id="@+id/CountSystemOCT"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    android:phoneNumber="true"
  	android:text="0"
  />
  <TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="14dp"
	android:text="@string/CalcScreenBIN" 
  />
  <EditText
	android:id="@+id/CountSystemBIN"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    android:phoneNumber="true"
  	android:text="0"
  />
</LinearLayout>
      
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true" 
        android:layout_gravity="bottom"
        >
        <WebView
            android:id="@+id/webbanner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"/>
      </LinearLayout>


  </RelativeLayout>