<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_button" 
    android:layout_alignParentLeft="true"
    >
<LinearLayout 
    android:id="@+id/VerticalScreen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
    android:id="@+id/ScreenLayout"
    android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
    <LinearLayout
      android:id="@+id/Inside1"
      android:orientation="horizontal"
  	  android:layout_width="fill_parent"
  	  android:layout_height="wrap_content">
      <TextView 
   		  android:id="@+id/FromText"
	      android:text="@string/CalcScreenFrom"
          android:textSize="17dp"
   		  android:textColor="#FFFFFF"
   		  android:gravity="center"
   		  android:layout_weight="1"
   		  android:layout_width="0dp" 
   		  android:layout_height="wrap_content"
   		  android:editable="false"
   		  android:cursorVisible="false">
   	  </TextView>
      <TextView 
   		android:id="@+id/ToText"
	    android:text="@string/CalcScreenTo"
        android:textSize="17dp"
 	    android:textColor="#FFFFFF"
   		android:gravity="center"
   		android:layout_weight="1"
   		android:layout_width="0dp" 
   		android:layout_height="wrap_content"
   		android:editable="false"
   		android:cursorVisible="false">
   	  </TextView>
   	</LinearLayout>  
  </LinearLayout>

  <LinearLayout
    android:id="@+id/Layout1"
    android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
    <LinearLayout
      android:id="@+id/Inside2"
      android:orientation="horizontal"
  	  android:layout_width="fill_parent"
  	  android:layout_height="wrap_content">
      <EditText 
   		  android:id="@+id/LengthEdit1"
	      android:textStyle="bold"
   		  android:gravity="center"
   		  android:textSize="16dp"
   		  android:singleLine="true"
   		  android:layout_weight="1"
   		  android:layout_width="0dp" 
   		  android:layout_height="wrap_content"
   		  android:editable="false"
   		  android:cursorVisible="false"
   		  android:onClick="Length1Click">
   	  </EditText>
      <EditText 
   		  android:id="@+id/LengthEdit2"
   		  android:textStyle="bold"
   		  android:gravity="center"
   		  android:textSize="16dp"
   		  android:singleLine="true"
   		  android:layout_weight="1"
   		  android:layout_width="0dp" 
   		  android:layout_height="wrap_content"
   		  android:editable="false"
   		  android:cursorVisible="false"
   		  android:onClick="Length2Click">
   	  </EditText>
   	</LinearLayout>  
  </LinearLayout>

  <LinearLayout
    android:id="@+id/Layout2"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
    android:orientation="vertical">
    <Button 		
   		android:id="@+id/ReverseButton"
   		android:layout_gravity="center"
		android:background="@drawable/reverse_button"
   		android:onClick="ConvertClick" 
   		android:layout_width="wrap_content" 
   		android:layout_height="wrap_content">
   	</Button>	
  </LinearLayout>

  <LinearLayout
    android:id="@+id/Layout3"
    android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
    <LinearLayout
      android:id="@+id/Inside3"
      android:orientation="horizontal"
  	  android:layout_width="fill_parent"
  	  android:layout_height="wrap_content">
      <TextView 
   		  android:id="@+id/ValueText"
	      android:text="@string/CalcScreenValue"
          android:textSize="17dp"
   		  android:textColor="#FFFFFF"
   		  android:gravity="center"
   		  android:layout_weight="1"
   		  android:layout_width="0dp" 
   		  android:layout_height="wrap_content"
   		  android:editable="false"
   		  android:cursorVisible="false">
   	  </TextView>
      <TextView 
   		android:id="@+id/ResultText"
	    android:text="@string/CalcScreenResult"
        android:textSize="17dp"
	    android:textColor="#FFFFFF"
   		android:gravity="center"
   		android:layout_weight="1"
   		android:layout_width="0dp" 
   		android:layout_height="wrap_content"
   		android:editable="false"
   		android:cursorVisible="false">
   	  </TextView>
   	</LinearLayout>  
  </LinearLayout>

  <LinearLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
    android:orientation="horizontal">
    <EditText 
    	android:textStyle="bold" 
    	android:layout_height="wrap_content" 
    	android:layout_width="0dp" 
    	android:gravity="center" 
   		android:textColorHighlight="#EE1515"
    	android:layout_weight="1" 
    	android:numeric="decimal" 
    	android:phoneNumber="true" 
  		android:singleLine="true"
  		android:focusable="true"
    	android:id="@+id/LCountEdit1">
    </EditText>	
      <ImageView 
   		  android:id="@+id/ResultArrow"
   		  android:contentDescription="Result"
   		  android:background="@drawable/arrow_72"
   		  android:layout_width="wrap_content" 
   		  android:layout_height="wrap_content"
   		  android:editable="false"
   		  android:cursorVisible="false">
   	  </ImageView>
    <EditText 		
   		android:id="@+id/LCountEdit2"
   		android:textStyle="bold"
   		android:gravity="center"
   		android:layout_weight="1"
   		android:layout_width="0dp" 
   		android:layout_height="wrap_content"
	    android:phoneNumber="true"
   		android:numeric="decimal"
	    android:editable="false"
	    android:cursorVisible="false"
        android:singleLine="true">
   	</EditText>	

  </LinearLayout>

    <LinearLayout
		android:id="@+id/ThickBorder"
		android:orientation="horizontal"
   		android:layout_width="fill_parent"
   		android:layout_height="4dip">
	</LinearLayout>

  <LinearLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
      <TextView 
   		android:id="@+id/DescriptionHeader"
	    android:text="@string/CalcScreenDescHeader"
        android:textSize="17dp"
        android:textStyle="bold"
	    android:textColor="#FFFFFF"
   		android:layout_width="wrap_content" 
   		android:layout_height="wrap_content"
   		android:visibility="visible">
   	  </TextView>
      <TextView 
   		android:id="@+id/DescriptionName"
	    android:text=""
        android:textSize="17dp"
        android:textStyle="bold"
	    android:textColor="#FFFFFF"
   		android:layout_width="fill_parent" 
   		android:layout_height="wrap_content"
   		android:visibility="visible"
   		android:cursorVisible="false">
   	  </TextView>
  </LinearLayout>
  
      <LinearLayout
		android:id="@+id/ThickBorder2"
		android:orientation="horizontal"
   		android:layout_width="fill_parent"
   		android:layout_height="4dip">
	  </LinearLayout>

      <TextView 
   		android:id="@+id/DescriptionText"
	    android:text=""
        android:textSize="17dp"
	    android:textColor="#FFFFFF"
   		android:layout_width="fill_parent" 
   		android:layout_height="wrap_content">
   	  </TextView>
</LinearLayout>
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true" 
        android:layout_gravity="bottom"
        >
        <WebView
            android:id="@+id/webbanner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
		</LinearLayout>


</RelativeLayout>